--- a/template/index.html
+++ b/template/index.html
@@ -36,7 +36,7 @@
                             Windows
                         </a>
                         <div class="dropdown-menu left-dropdown dropdown-show" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Windows11</a>
+                            <a class="dropdown-item" href="mainItem.html">Windows11</a>
                             <a class="dropdown-item" href="#">windows10</a>
                             <a class="dropdown-item" href="#">windows10</a>
                         </div>
@@ -51,7 +51,7 @@
                             Windows
                         </a>
                         <div class="dropdown-menu dropdown-show" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Windows11</a>
+                            <a class="dropdown-item" href="mainItem.html">Windows11</a>
                             <a class="dropdown-item" href="#">windows10</a>
                             <a class="dropdown-item" href="#">windows10</a>
                         </div>
@@ -76,7 +76,7 @@
                             Server
                         </a>
                         <div class="dropdown-menu left-dropdown dropdown-show" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Exchange Server</a>
+                            <a class="dropdown-item" href="submain-storage.html">Exchange Server</a>
                             <a class="dropdown-item" href="#">SQL Server</a>
                         </div>
                     </li>
@@ -89,7 +89,7 @@
                             Server
                         </a>
                         <div class="dropdown-menu dropdown-show" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Exchange Server</a>
+                            <a class="dropdown-item" href="submain-storage.html">Exchange Server</a>
                             <a class="dropdown-item" href="#">SQL Server</a>
                         </div>
                     </li>
