--- a/template/submain-cloud.html
+++ b/template/submain-cloud.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CloudHeros - Cloud</title>
+    <title>TheCloudHeros - Cloud</title>
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="../style/mainItem.css" />
     <script src="../bootstrap/jquery-3.5.1.min.js" defer></script>
@@ -23,7 +23,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand mr-5" href="index.html">CloudHeros</a>
+            <a class="navbar-brand mr-5" href="index.html">TheCloudHeros</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
